<resources>
    <string name="app_name">Tic Tac Toe </string>
    <string name="action_settings">Settings</string>
    <string name="cross">X</string>
    <string name="naught">O</string>
    <string name="winnable">Winnable</string>
    <string name="select_your_choice">Select Your Choice :</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="vs">VS</string>
    <string name="player_1_0">Player 1 : 0</string>
    <string name="player_2_0">Player 2 : 0</string>
    <string name="first_player_won">First Player Won</string>
    <string name="replay">Replay</string>
    <string name="who_is_going_to_start">Who is Going to Start:</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>

</resources>
