<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rl1"
    android:background="@drawable/bg1"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context="it.company.mindline.tictactoe.playArea">

    <TextView
        android:id="@+id/txtWhoStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/who_is_going_to_start"
        android:textColor="#FFFFFF"
        android:textSize="19dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/rdgrp"
        android:checkedButton="@+id/StartWithX"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/StartWithX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/poppins"
            android:buttonTint="@android:color/white"
            android:text="@string/cross"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />


        <RadioButton
            android:id="@+id/StartWithO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/poppins"
            android:buttonTint="@android:color/white"
            android:text="@string/naught"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

    </RadioGroup>

        <RelativeLayout
            android:id="@+id/rltxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/player_1_0"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtFirst"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins"
                android:text="@string/player_2_0"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_shape_small"
                android:text="@string/start"
                android:onClick="StartThegame"
                android:textColor="@android:color/white"
                android:fontFamily="@font/poppins"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"/>

        </RelativeLayout>


    <TextView
        android:id="@+id/txtWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/first_player_won"
        android:fontFamily="@font/poppins"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        android:layout_marginTop="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:weightSum="100">

            <Button
                android:id="@+id/button_00"
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:layout_weight="33"
                android:alpha="0.50"
                android:color="#66FF0000"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text=""
                android:textColor="#E50D0D"
                android:textSize="32sp" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />


            <Button
                android:id="@+id/button_01"
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:layout_weight="33"
                android:alpha="0.50"
                android:color="#66FF0000"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="32sp" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/button_02"
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:layout_weight="33"
                android:alpha="0.50"
                android:color="#66FF0000"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="32sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:weightSum="100">

            <Button
                android:id="@+id/button_10"
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:layout_weight="33"
                android:alpha="0.50"
                android:color="#66FF0000"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="32sp" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/button_11"
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:layout_weight="33"
                android:alpha="0.50"
                android:color="#66FF0000"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="32sp" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/button_12"
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:layout_weight="33"
                android:alpha="0.50"
                android:color="#66FF0000"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="32sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:weightSum="100">

            <Button
                android:id="@+id/button_20"
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:layout_weight="33"
                android:alpha="0.50"
                android:color="#66FF0000"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="32sp" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/button_21"
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:layout_weight="33"
                android:alpha="0.50"
                android:color="#66FF0000"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="32sp" />

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/button_22"
                android:layout_width="0dp"
                android:layout_height="95dp"
                android:layout_weight="33"
                android:alpha="0.50"
                android:color="#66FF0000"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="32sp" />

        </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_shape_small"
        android:fontFamily="@font/poppins"
        android:textColor="@android:color/white"
        android:text="@string/reset" />

    <Button
        android:id="@+id/btnReplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnReset"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_shape_small"
        android:text="@string/replay"
        android:textColor="@android:color/white"
        android:fontFamily="@font/poppins"/>

    </RelativeLayout>

</LinearLayout>


</ScrollView>